--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --mainyellow: #fff323;
+  --mainyellow: #ffcc23;
   --mainorange: #ff5403;
   --maingrey: #f7f7f7;
   --maingreen: #95cd41;
