--- a/style2.css
+++ b/style2.css
@@ -1,6 +1,6 @@
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   direction: rtl;
   font-family: "IranianSans";
   font-weight: 700;
@@ -16,9 +16,10 @@
 /*========== main */
 
 main {
-  height: 100vh;
-  display: flex;
-  align-items: center;
+  /* height: 100vh; */
+  padding: 30px 0;
+  /* display: flex;
+  align-items: center; */
 }
 
 /* alarm section */
@@ -28,7 +29,7 @@ main {
   border-top: var(--maingrey) solid 1px;
   border-radius: 15px;
   width: 30%;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   padding-left: 10px;
   font-size: 1.2rem;
   /* padding: 5px 0px; */
@@ -56,43 +57,33 @@ main {
   font-weight: 700;
   box-shadow: 0px 0px 15px var(--maingrey);
   position: relative;
+  padding: 0 20px 20px 20px;
 }
 
 /* form */
 
 .input {
   background: var(--mainyellow);
-  border: none;
-  border-bottom: var(--maingrey) solid 1px;
-  border-top: black solid 1px;
-  width: 50%;
+  /* border-bottom: var(--maingrey) solid 1px;
+  border-top: black solid 1px; */
+  /* width: 50%; */
   outline: none;
   transition: width 0.4s;
   border-radius: 10px;
   padding: 5px 5px;
-  height: 35px;
+  margin: 0;
 }
 
 .input:focus {
   background: var(--mainyellow);
   width: 75%;
-  height: auto;
 }
-
-select option {
-  padding: 8px 0;
-}
-
 .form-input-label {
-  width: 15%;
+  width: 25%;
   display: inline-block;
   margin-bottom: 0;
+  padding: 0;
 }
-
-.form-input-label:focus {
-  border: #ff5403 solid 3px;
-}
-
 .form-check-label {
   width: 15%;
 }
@@ -108,8 +99,4 @@ select option {
   left: 25px;
   border-radius: 25%;
   /* padding: 10px; */
-}
-
-#Portion {
-  /* height: 300px; */
 }
